# curses-tui

./: CMakeCache.txt  CMakeLists.txt  Makefile  TUI_test.cpp  cmake_install.cmake  tui_test
include/: Animations.hpp  Focus.hpp  Misc_functions.hpp  TUI.hpp  Timer.hpp
source/: Animations.cpp  Focus.cpp  Misc_functions.cpp  TUI.cpp  Timer.cpp
